# spectrospatial_component_separation

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: fit_data.py  main.py  model.py  model_data.py  read_data.py
